# ideapad-control

./: .gitignore  CMakeLists.txt  README.md
example/simple/: main.cpp  test.toml
ideapad-tray/: CMakeLists.txt  main.cpp
ideapad-tray/simple/: main.cpp  test.toml
src/ideapad-control/: main.cpp
